Create logic for switching themes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <h1>Light / Dark</h1>
+    <div class="toggle">
+      <input id="switch" type="checkbox" name="theme">
+      <label for="switch"></label>
+    </div>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus tempora nisi quis minima,
+      vero eius aliquam
+      magni iste perferendis vitae quod beatae similique at dolorem nihil praesentium sapiente in qui?</p>
+  </div>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
